--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,83 @@
 /* Ini CSS */
+
+nav {
+    border: 1px solid;
+    display: flex;
+    justify-content: space-between;
+    padding: 12px;
+    align-items: center;
+}
+
+.logo-icon {
+    border: 1px solid;
+    background-image: url(https://dummyimage.com/400x400/000/fff);
+    height: 25px;
+    width: 50px;
+    background-size: cover;
+}
+
+.nav-container {
+    display: flex;
+}
+
+.nav-item {
+    border: 1px solid;
+    padding: 8px;
+}
+
+main{
+    padding-inline: 42px;
+}
+
+.main-content{
+    display: flex;
+}
+
+.main-content-item{
+    border: 1px solid;
+    width: 100%;
+    height: 100%;
+}
+
+.main-content-form{
+    border: 1px solid;
+    width: 100%;
+    height: auto;
+}
+
+.main-content-banner{
+    border: 1px solid;
+    width: 100%;
+    height: 150px;
+    background-image: url(https://dummyimage.com/200x200/000/fff);
+}
+
+.main-content-banner-capt{
+    padding-inline: 36px;
+    padding-block: 18px;
+}
+
+.main-content-desc{
+    /* border: 1px solid; */
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    padding-block: 10px;
+    padding-left: 36px;
+}
+
+.item-icon{
+    height: 36px;
+    width: 36px;
+    border: 1px solid;
+    border-radius: 50%;
+}
+
+h3{
+    margin: unset;
+    padding-left: 10px;
+}
+
+p{
+    margin: unset;
+}
